src/test/deca/syntax/invalid/include_cycle_2.deca
#include "include_cycle_1.deca"